<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".KeepActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:paddingTop="18dp"
android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
>

    <FrameLayout
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_gradient"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.example.spider.WaveView
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="今日阅读量"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressView"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressView"
        app:layout_constraintStart_toStartOf="@+id/circularProgressView"
        app:layout_constraintTop_toTopOf="@+id/circularProgressView"
        app:layout_constraintVertical_bias="0.277"></TextView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="65"
        android:textColor="#FFFFFF"
        android:textSize="60dp"

        app:layout_constraintEnd_toEndOf="@+id/circularProgressView"
        app:layout_constraintStart_toStartOf="@+id/circularProgressView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="打卡天数"
        android:textColor="#FFFFFF"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/circularProgressView"
        app:layout_constraintStart_toStartOf="@+id/imageView"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">


    </TextView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textColor="#FFFFFF"
        android:textSize="35dp"
        app:layout_constraintEnd_toStartOf="@+id/circularProgressView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="累计阅读"
        android:textColor="#FFFFFF"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circularProgressView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"></TextView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textColor="#FFFFFF"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/circularProgressView"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></TextView>


    <Button
        android:id="@+id/button5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@mipmap/historyright"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toTopOf="@+id/imageView"></Button>

    <Button
        android:id="@+id/button6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@mipmap/search3"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toTopOf="@+id/imageView"></Button>


    <com.example.spider.CircularProgressView
        android:id="@+id/circularProgressView"
        android:layout_width="194dp"
        android:layout_height="240dp"
        app:backColor="#91E6D3"
        app:backWidth="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.283"
        app:progColor="#FFFFFF"
        app:progWidth="10dp"
        app:progress="88"></com.example.spider.CircularProgressView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="349dp"
        android:layout_height="120dp"

        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressView"></ImageView>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="349dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"></ImageView>

    <ProgressBar
        android:id="@+id/progress_bar_healthy"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="340dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar_bg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"


        android:textColor="	#800000"

        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"></TextView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"
        android:text="进度："
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:text="续读"
        android:textColor="#808080"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"></TextView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="21dp"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/read2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/textView"

        ></ImageView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="31dp"
        android:layout_height="21dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:text="历史"
        android:textColor="#808080"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"></TextView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="22dp"
        android:layout_height="21dp"
        android:background="@mipmap/history5"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_healthy"
        app:layout_constraintVertical_bias="0.473"></ImageView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="320dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:singleLine="false"
        android:text="道可道，非常道；名可名，非常名。"
        android:textColor="#696969"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="(体察到说明了的东西,并非是一成不变的永恒真理)"
        android:textColor="#808080"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView14"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"

        android:layout_marginBottom="8dp"
        android:text="《道德经》——老子"
        android:textColor="#696969"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"></TextView>





</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:headerLayout="@layout/head"
        app:menu="@menu/menu"
        tools:ignore="MissingConstraints">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>