...
    android:layout_height="match_parent">



        <TextView
            android:textColor="#000000"
            android:text="text"
            android:background="#FCF9F0"
            android:textSize="16dp"
            android:paddingLeft="10dp"
            android:gravity="center|left"
            android:id="@+id/text"
            android:clickable="true"
...
