...
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
